--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,7 +34,8 @@
     "src/**/*.tsx",
     "src/**/*.vue",
     "tests/**/*.ts",
-    "tests/**/*.tsx"
+    "tests/**/*.tsx",
+    "src/store/data.js"
   ],
   "exclude": [
     "node_modules"
